npm使ってgulpのインストールおよびstylusを使えるようにした

--- a/wp-content/themes/wakakusastreet/assets/stylus/style.styl
+++ b/wp-content/themes/wakakusastreet/assets/stylus/style.styl
@@ -6,11 +6,13 @@ Version: 1.0-20170930
 Author: MakotoOtsuka
 Author URI: http://www.wakakusa-st.jp/
 */
+
 /* header */
-#header-content {
-  width: 100%;
-  position: relative;
-}
-#header-menu ul {
-  text-decoration: none;
-}
+
+#header-content
+  width 100%
+  position relative
+
+#header-menu ul
+  text-decoration none
+
