共通系stylusの導入

--- a/wp-content/themes/wakakusastreet/assets/stylus/style.styl
+++ b/wp-content/themes/wakakusastreet/assets/stylus/style.styl
@@ -7,12 +7,4 @@ Author: MakotoOtsuka
 Author URI: http://www.wakakusa-st.jp/
 */
 
-/* header */
-
-#header-content
-  width 100%
-  position relative
-
-#header-menu ul
-  text-decoration none
-
+@import '/common/_common'
