--- a/wp-content/themes/wakakusastreet/style.css
+++ b/wp-content/themes/wakakusastreet/style.css
@@ -6,11 +6,684 @@ Version: 1.0-20170930
 Author: MakotoOtsuka
 Author URI: http://www.wakakusa-st.jp/
 */
-/* header */
-#header-content {
+html,
+body,
+input,
+header,
+h1,
+a,
+img,
+nav,
+ul,
+li,
+span,
+i,
+label,
+ol,
+main,
+h2,
+h3,
+div,
+em,
+p,
+form,
+fieldset,
+button,
+select,
+textarea,
+dl,
+dt,
+dd,
+address,
+footer,
+iframe,
+h5 {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  background: #f1f1f1;
+}
+main {
+  width: auto;
+  margin: 100px 40px 40px 240px;
+  display: block;
+}
+main#login {
+  margin: 100px 0 0;
+}
+a {
+  text-decoration: none;
+  outline: none;
+}
+img,
+fieldset,
+input,
+textarea,
+button,
+select {
+  border: none;
+  outline: none;
+}
+input[type=submit],
+input[type=button],
+textarea,
+button {
+  -webkit-appearance: none;
+}
+ul,
+ol {
+  list-style: none;
+}
+em {
+  font-style: normal;
+}
+address {
+  font-style: normal;
+}
+body,
+input,
+textarea,
+button,
+select {
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Noto Sans Japanese", "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, Meiryo, sans-serif;
+  font-size: 13px;
+  line-height: 24px;
+}
+.fabrikat,
+span.brand {
+  font-family: Fabrikat, sans-serif;
+  font-weight: inherit;
+  letter-spacing: 0.05em;
+}
+body,
+input,
+textarea,
+button,
+select,
+a {
+  color: #76727e;
+}
+h1 {
+  font-weight: 700;
+}
+body,
+input,
+textarea,
+button,
+select,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 400;
+}
+.button {
+  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+}
+.button .fa-chevron-left,
+.button .fa-chevron-right,
+.button .fa-chevron-down {
+  position: absolute;
+  margin-top: 8px;
+}
+.button .fa-chevron-left {
+  left: 24px;
+}
+.button .fa-chevron-right,
+.button .fa-chevron-down {
+  right: 24px;
+}
+.button.disabled {
+  cursor: default;
+}
+.field label,
+.field input,
+.field textarea,
+.field select {
+  color: #2d2c33;
+}
+.field label,
+.field select,
+.field input[type=file] {
+  cursor: pointer;
+}
+.field input[type=text],
+.field input[type=email],
+.field input[type=password],
+.field input[type=tel],
+.field textarea {
+  padding: 8px 16px;
+  border-radius: 10px;
+}
+.field select {
+  padding: 8px 12px;
+  background: #fff;
+}
+.field textarea {
+  resize: vertical;
+}
+.field input[type=text][disabled],
+.field input[type=email][disabled],
+.field input[type=password][disabled],
+.field input[type=tel][disabled],
+.field select[disabled],
+.field textarea[disabled] {
+  color: #c9c8d0;
+  cursor: not-allowed;
+}
+.field .with-errors label {
+  color: #ec5045;
+}
+.field .error-message {
+  margin-top: 8px;
+  color: #ec5045;
+}
+.field.file-field .error-message {
+  margin-top: -8px;
+}
+.field.checkbox-field input[type=checkbox],
+.field.checkbox-field label {
+  display: inline-block;
+  width: auto;
+}
+.field.checkbox-field label {
+  padding: 8px 16px;
+}
+.field .preview,
+.field .preview img {
+  display: block;
+}
+.field .preview img {
   width: 100%;
+  height: auto;
+}
+.actions .button {
   position: relative;
 }
-#header-menu ul {
+.actions .button:hover {
+  opacity: 0.87;
+}
+.actions .button:active {
+  -webkit-box-shadow: 0 0 999px 0 rgba(0,0,0,0.1) inset;
+          box-shadow: 0 0 999px 0 rgba(0,0,0,0.1) inset;
+}
+.actions .button .fa {
+  position: absolute;
+}
+.flash {
+  margin: 0 auto;
+  border-radius: 4px;
+  background: #fff;
+  text-align: center;
+}
+.success {
+  border: 1px solid #3396ff;
+  color: #3396ff;
+}
+.failed {
+  border: 1px solid #ec5045;
+  color: #ec5045;
+}
+#form-error-message {
+  color: #ec5045;
+}
+#input-error {
+  margin-bottom: 32px;
+}
+#input-error div.title {
+  color: #ec5045;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 3px;
+  background: #fff;
+  margin-bottom: 24px;
+  padding: 10px 20px;
+}
+#input-error li {
+  color: #ec5045;
+  border-radius: 3px;
+  background: #f2dede;
+  margin-bottom: 8px;
+  padding: 8px 20px;
+}
+form section.form,
+form div.form {
+  border: 1px solid #e5e1ea;
+  -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,0.05);
+          box-shadow: 2px 2px 2px rgba(0,0,0,0.05);
+  background: #fff;
+  padding: 48px;
+}
+form section.form dl,
+form div.form dl {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+form section.form dl dt,
+form div.form dl dt {
+  width: 20%;
+  font-weight: bold;
+  text-align: center;
+  border-bottom: 1px solid #e9e7ec;
+  padding: 16px 0;
+}
+form section.form dl dd,
+form div.form dl dd {
+  width: 80%;
+  border-bottom: 1px solid #e9e7ec;
+  padding: 16px 0;
+}
+form section.form dl dd div.item,
+form div.form dl dd div.item {
+  border-left: 4px solid #eff4f4;
+  padding-left: 32px;
+}
+form section.form dl dd div.item.need-mark,
+form div.form dl dd div.item.need-mark {
+  border-color: #dc4373;
+}
+form section.form dl dd div.item p,
+form div.form dl dd div.item p {
+  font-size: 12px;
+}
+form section.form dl dd div.item input,
+form div.form dl dd div.item input,
+form section.form dl dd div.item textarea,
+form div.form dl dd div.item textarea,
+form section.form dl dd div.item select,
+form div.form dl dd div.item select {
+  width: 100%;
+  line-height: 2;
+  border: 1px solid #e5e1ea;
+  background: #f8f8f8;
+  padding: 0 8px;
+}
+form section.form dl dd div.item input:focus,
+form div.form dl dd div.item input:focus,
+form section.form dl dd div.item textarea:focus,
+form div.form dl dd div.item textarea:focus,
+form section.form dl dd div.item select:focus,
+form div.form dl dd div.item select:focus {
+  border-color: faavo_color;
+  background: #fff;
+}
+form section.form dl dd div.item input,
+form div.form dl dd div.item input,
+form section.form dl dd div.item select,
+form div.form dl dd div.item select {
+  height: 35px;
+}
+form section.form dl dd div.item select,
+form div.form dl dd div.item select {
+  width: 50%;
+}
+form section.form dl dd div.item textarea,
+form div.form dl dd div.item textarea {
+  height: 200px;
+  padding: 10px 8px;
+}
+form section.form dl dd div.item input[type="file"],
+form div.form dl dd div.item input[type="file"] {
+  display: none;
+}
+form section.form dl dd div.item button.select-file,
+form div.form dl dd div.item button.select-file {
+  color: #fff;
+  border-radius: 3px;
+  background: #46bcb8;
+  margin-bottom: 8px;
+  padding: 8px 32px;
+  cursor: pointer;
+}
+form section.form dl dd div.item button.select-file:hover,
+form div.form dl dd div.item button.select-file:hover {
+  opacity: 0.9;
+}
+form section.form dl dd div.item div.preview-file,
+form div.form dl dd div.item div.preview-file {
+  max-width: 300px;
+  max-height: 300px;
+  background: #fff;
+  margin-top: 16px;
+  overflow: hidden;
+  display: none;
+}
+form section.form dl dd div.item div.preview-file.on,
+form div.form dl dd div.item div.preview-file.on {
+  display: block;
+}
+form section.form dl dd div.item div.preview-file img,
+form div.form dl dd div.item div.preview-file img {
+  width: 100%;
+  max-width: 100%;
+}
+@media (max-width: 720px) {
+  .field {
+    margin-bottom: 24px;
+  }
+  .field label,
+  .field input,
+  .field textarea,
+  .field select {
+    font-size: 13px;
+    line-height: 24px;
+  }
+  .field label,
+  .field input[type=text],
+  .field input[type=email],
+  .field input[type=password],
+  .field input[type=tel],
+  .field input[type=file],
+  .field textarea,
+  .field select {
+    display: block;
+    width: 100%;
+  }
+  .field select {
+    height: 36px;
+  }
+  .field label {
+    margin-bottom: 4px;
+  }
+  .file-field .preview {
+    margin-top: 8px;
+  }
+  .actions .button {
+    display: block;
+    width: 100%;
+  }
+  .actions .button .fa {
+    right: 16px;
+    margin-top: 4px;
+  }
+  #form-error-message {
+    margin-bottom: 16px;
+  }
+  .error-message {
+    font-size: 10px;
+    line-height: 16px;
+  }
+  .flash {
+    font-size: 14px;
+    padding: 8px;
+    margin-bottom: 36px;
+  }
+}
+@media (min-width: 721px) {
+  .field {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 24px;
+  }
+  .field:last-child {
+    margin: 0;
+  }
+  .field label,
+  .field input,
+  .field textarea,
+  .field select {
+    font-size: 16px;
+    line-height: 32px;
+  }
+  .field label {
+    padding: 8px 0;
+  }
+  .field > label {
+    width: 160px;
+  }
+  .field > input[type=text],
+  .field > input[type=email],
+  .field > input[type=password],
+  .field > input[type=tel],
+  .field > input[type=file],
+  .field > textarea,
+  .field > select {
+    width: calc(100% - 160px);
+  }
+  input[type=file] {
+    padding: 8px 0;
+    line-height: 1;
+  }
+  .field .with-errors:first-child {
+    width: 160px;
+  }
+  .field .with-errors:first-child label {
+    display: block;
+    width: 100%;
+  }
+  .field .with-errors {
+    width: calc(100% - 160px);
+  }
+  .field .with-errors label {
+    display: block;
+  }
+  .field .with-errors input[type=text],
+  .field .with-errors input[type=email],
+  .field .with-errors input[type=password],
+  .field .with-errors input[type=tel],
+  .field .with-errors input[type=file],
+  .field .with-errors textarea,
+  .field .with-errors select {
+    width: 100%;
+  }
+  .file-field .preview {
+    margin-top: -8px;
+  }
+  .checkbox-field {
+    margin-top: -16px;
+  }
+  .checkbox-field input[type=checkbox] {
+    height: 48px;
+  }
+  .actions input[type=button],
+  .actions input[type=submit],
+  .actions button {
+    font-size: 16px;
+    line-height: 32px;
+  }
+  .actions .button .fa {
+    margin-top: 8px;
+    right: 40px;
+  }
+  #form-error-message {
+    margin-bottom: 24px;
+  }
+  .preview {
+    width: 200px;
+    margin-left: 160px;
+  }
+  .error-message {
+    margin-left: 160px;
+    font-size: 13px;
+    line-height: 24px;
+  }
+  .flash {
+    font-size: 16px;
+    padding: 12px;
+    margin-bottom: 48px;
+  }
+}
+@media (min-width: 721px) and (max-width: 960px) {
+  .field input[type=text],
+  .field input[type=email],
+  .field input[type=password],
+  .field input[type=tel],
+  .field input[type=file],
+  .field textarea,
+  .field select {
+    width: calc(100% - 160px);
+  }
+}
+#main > section h2,
+#main > .section h2 {
+  font-weight: 400;
+  color: #2d2c33;
+  text-align: center;
+}
+@media (max-width: 720px) {
+  #main > section h2,
+  #main > .section h2 {
+    font-size: 17px;
+    line-height: 28px;
+    margin-bottom: 32px;
+  }
+}
+@media (min-width: 721px) {
+  #main > section h2,
+  #main > .section h2 {
+    font-size: 30px;
+    line-height: 48px;
+    margin-bottom: 56px;
+  }
+}
+header {
+  margin: 16px;
+}
+header .title {
+  text-align: center;
+}
+header .menu {
+  margin-top: 16px;
+}
+header section#logo {
+  width: 200px;
+  background: #151515;
+}
+header i {
+  font-size: 40px;
+}
+header section#list {
+  width: calc(100% - 200px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+header section#list ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+header section#list ul li a {
+  color: #abb3aa;
+  font-size: 30px;
+  border-right: 1px solid #545454;
+  padding: 20px 25px;
+  display: inline-block;
+}
+header section#list ul li a:hover {
+  color: #a1d84c;
+  background: #252525;
+}
+header section#list div.user {
+  color: #eff4f4;
+  margin-left: auto;
+  margin-right: 10px;
+}
+header section#list div.user a.user-logout {
+  margin-left: 8px;
+}
+header div#need-login {
+  color: #eff4f4;
+  padding: 0 25px;
+}
+section#side-menu {
+  top: 70px;
+  left: 0;
+  width: 200px;
+  height: calc(100vh - 70px);
+  background: #2d2c33;
+  position: fixed;
+  z-index: 3;
+}
+section#side-menu a {
+  height: 60px;
+  line-height: 60px;
+  color: #abb3aa;
   text-decoration: none;
+  padding-left: 24px;
+  display: block;
+}
+section#side-menu a i {
+  font-size: 16px;
+  margin-right: 5px;
+}
+section#side-menu ul {
+  position: relative;
+}
+section#side-menu ul.on a {
+  color: #eff4f4;
+  background: #92b953;
+}
+section#side-menu ul.on li:first-child:after {
+  content: '';
+  top: 28px;
+  right: 0;
+  width: 0;
+  height: 0;
+  border: solid transparent 8px;
+  border-right-color: #f1f1f1;
+  margin: -8px 0 0 0;
+  position: absolute;
+  pointer-events: none;
+}
+section#side-menu ul.on div.sub-menu {
+  background: #92b953;
+  padding-bottom: 15px;
+  position: static;
+}
+section#side-menu ul.on div.sub-menu a {
+  height: 40px;
+  line-height: 40px;
+}
+section#side-menu ul.on li.on a {
+  color: #fff;
+  font-weight: bold;
+}
+section#side-menu ul:hover li:first-child a,
+section#side-menu ul:hover div.sub-menu a {
+  color: #fff;
+  background: #97ca47;
+  opacity: 1;
+}
+section#side-menu ul:hover a:after {
+  content: '';
+  right: 0;
+  bottom: -30px;
+  width: 0;
+  height: 0;
+  border-left: 30px solid transparent;
+  border-top: 30px solid transparent;
+  position: absolute;
+  z-index: 4;
+}
+section#side-menu ul.on:hover li:first-child a,
+section#side-menu ul.on:hover div.sub-menu a {
+  color: #fff;
+  background: #92b953;
+}
+section#side-menu ul div.sub-menu {
+  top: 0;
+  left: 200px;
+  width: 200px;
+  position: absolute;
+  display: none;
+}
+section#side-menu ul.on div.sub-menu,
+section#side-menu ul:hover div.sub-menu {
+  display: block;
+}
+section#side-menu ul:hover div.sub-menu a:hover {
+  background: #a1d84c;
 }
